# midi

./: .gitignore  LICENSE  MIDI.cabal  README.md  TODO.md  bittools.hs  foo.mid  foo1.mid  midi.hs  midimap.md
src/: Main.hs  main.hs
src/Midi/: DeltaTime.hs  Event.hs  File.hs
src/bit/: convert.hs  variable.hs
src/event/: event.hs  midi.hs
src/event/midi/: keySignature.hs  note.hs  timeSignature.hs
src/midi/: ByteStream.hs  Event.hs  File.hs  chunk.hs  deltaTime.hs  event.hs  keySignature.hs  timeSignature.hs
src/midi/Event/: Meta.hs  Midi.hs
src/midi/event/: meta.hs  midi.hs
src/test/midi/: chunkSpec.hs
test/midi/: deltaTimeSpec.hs
